--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -24,6 +24,7 @@
       #footer-1 p {
         font-size: 20px;
         font-weight: 500;
+        color: var(--Color-texto);
       }
       
       #But-div{
@@ -36,6 +37,7 @@
       #But-div p {
         font-size: 20px;
         font-weight: 900;
+        color: var(--Color-texto);
       }
       
       .footer-central{
@@ -50,13 +52,13 @@
       .footer-central p{
         font-size: 20px;
         margin: 0rem 1rem;
-        color:  black;
+        color: var(--Color-texto);
         font-weight: 700;
       }
       
       .footer-central h1{
         line-height: 20rem;
-        color:  rgb(233, 233, 233);
+        color: var(--Color-texto-footer-h1);
         font-size: 305px;
         font-weight: 900;
       }
