--- a/src/hooks/Buttons/style.css
+++ b/src/hooks/Buttons/style.css
@@ -31,11 +31,10 @@
     height: 100%;
     width: 35%;
     z-index: 1;
-    background-color: rgb(26, 26, 26);
+    background-color: var(--Backgtound-color-nav-animetion);
     position: fixed;
     top: 0;
     right: -19.5rem;
-    /* Copy code to element you want to animate */
     animation: customAni2 400ms linear 0s normal forwards;
   } 
 
@@ -49,6 +48,15 @@
       transform: scaleX(0.3);
       transform-origin: 100% 100%;
       }
+  }
+
+  .semAnimetionNav nav {
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    justify-content: space-evenly;
+    align-items: end;
   }
 
   .semAnimetionNav ul {
@@ -72,7 +80,7 @@
     height: 100%;
     width: 25%;
     z-index: 1;
-    background-color: rgb(26, 26, 26);
+    background-color: var(--Backgtound-color-nav-animetion);
     position: fixed;
     top: 0;
     right: -5rem;
@@ -89,6 +97,15 @@
     transform: scaleX(1);
     transform-origin: 100% 100%;
     }
+  }
+
+  .AnimetionNav nav {
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    justify-content: space-evenly;
+    align-items: end;
   }
 
 
