Esgtilizando os buttons de contatos

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@
       --Color-about--text: #242424;
       --Color-traço--nav-2: #242424;
       --Backgtound-color-card-projetcs: #e0e0e0;
+      --Color-icons--projetcs: #242424;
       --Color-texto-footer-h1: #e0e0e0;
   }
 
@@ -60,6 +61,7 @@
     --Color-about--text: #eeeeee;
     --Color-traço--nav-2: #eeeeee;
     --Backgtound-color-card-projetcs: #272525;
+    --Color-icons--projetcs: #eeeeee;
     --Color-texto-footer-h1: #272525;
 }
 
