--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
       --Backgtound-color-nav: #e0e0e0;
       --Backgtound-color-nav-animetion: #e0e0e0;
       --Color-nav-a: #a3a3a3;
+      --Color-nav-animetino: #242323;
       --Color-nav-a-houve: #181818;
       --Color-buttom-br-en: #e0e0e0;
       --Color-texto: #242424;
@@ -46,6 +47,7 @@
     --Backgtound-color-nav: #272525;
     --Backgtound-color-nav-animetion: #272525;
     --Color-nav-a: #ebebeb;
+    --Color-nav-animetino: #f7f7f7;
     --Color-nav-a-houve: #979797;
     --Color-buttom-br-en: #686868;
     --Color-texto: #eeeeee;
