--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -7,40 +7,13 @@ main{
     transition: all 300ms;
   }
 
-  #About {
-    width: 400px;
-    font-size: 45px;
-    font-weight: bold;
-    background: transparent;
-    border: none;
-    padding: 0;
-    padding: 1em 1.5em;
-    color: #686868;
-    text-transform: uppercase;
+  .Main h1 {
+    margin: 2rem;
+    padding: 2rem;
+    font-size: 4rem;
+    font-weight: 900;
     text-align: center;
-    position: relative;
-    transition: 0.5s ease;
-    cursor: pointer;
-  }
-  
-  #About::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 4px;
-    width: 0;
-    background-color: #181817;
-    transition: 0.5s ease;
-  }
-  
-  #About:hover {
-    color: #1e1e2b;
-    transition-delay: 0.5s;
-  }
-  
-  #About:hover::before {
-    width: 100%;
+    color: var(--Color-Texto-pequeno);
   }
   
   .ABOUT {
