--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -6,6 +6,7 @@
         flex-direction: column;
         justify-content: end;
         align-items: center;
+        transition: all 300ms;
       }
       
       .footer_pai{
@@ -70,86 +71,91 @@
         align-items: center;
         gap: 4rem;
       }
-    /* From Uiverse.io by Mohsinech */ 
-    .btn {
-      background: transparent;
-      border: 1px solid var(--Color-Texto-pequeno);
-      outline: none;
-      padding: 12px 40px;
-      height: 60px;
-      border-radius: 100px;
-      overflow: hidden;
-      transform: scaleX(1);
-      transition: transform 0.5s cubic-bezier(0.4, 0, 0, 1);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-    }
 
-    .btn:hover {
-      animation: animate-scaleX 0.6s cubic-bezier(0.4, 0, 0, 1);
-      background: transparent;
-    }
-
-    .btn::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      background: black;
-      transition: transform 0.5s cubic-bezier(0.4, 0, 0, 1),
-        border-radius 0.5s cubic-bezier(0.4, 0, 0, 1);
-      width: 100%;
-      height: 100%;
-      border-radius: 50% 50% 0 0;
-      transform: translateY(100%);
-    }
-
-    .btn:hover::after {
-      transform: translateY(0%);
-      border-radius: 0;
-    }
-
-    .btn span {
-      font-size: 20px;
-      font-weight: 500;
-      overflow: hidden;
+    button {
       position: relative;
-      color: var(--Color-Texto-pequeno);
-    }
-
-    .btn span:after {
-      width: 100%;
-      height: 100%;
-      transition: transform 0.5s cubic-bezier(0.4, 0, 0, 1);
-      content: attr(data-text);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: absolute;
-      left: 50%;
-      bottom: 0;
-      z-index: 1;
-      transform: translate(-50%, 100%);
-      color: white;
-    }
-    .btn:hover span:after {
-      transform: translate(-50%, 0);
-    }
-
-    .btn:focus {
+      display: inline-block;
+      cursor: pointer;
       outline: none;
+      border: 0;
+      vertical-align: middle;
+      text-decoration: none;
+      background: transparent;
+      padding: 0;
+      font-size: inherit;
+      font-family: inherit;
     }
-
-    @keyframes animate-scaleX {
-      0% {
-        transform: scaleX(1);
-      }
-      50% {
-        transform: scaleX(1.05);
-      }
-      100% {
-        transform: scaleX(1);
-      }
+    
+    button.learn-more {
+      width: 12rem;
+      height: auto;
     }
+    
+    button.learn-more .circle {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      position: relative;
+      display: block;
+      margin: 0;
+      width: 3rem;
+      height: 3rem;
+      background: var(--Color-buttons-footer);
+      border-radius: 1.625rem;
+    }
+    
+    button.learn-more .circle .icon {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      background: #ffffff;
+    }
+    
+    button.learn-more .circle .icon.arrow {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      left: 0.625rem;
+      width: 1.125rem;
+      height: 0.125rem;
+      background: none;
+    }
+    
+    button.learn-more .circle .icon.arrow::before {
+      position: absolute;
+      content: "";
+      top: -0.29rem;
+      right: 0.0625rem;
+      width: 0.625rem;
+      height: 0.625rem;
+      border-top: 0.125rem solid var(--Color-buttins-border-top-footer);
+      border-right: 0.125rem solid var(--Color-buttins-border-top-footer);
+      transform: rotate(45deg);
+    }
+    
+    button.learn-more .button-text {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      padding: 0.75rem 0;
+      margin: 0 0 0 1.85rem;
+      color: var(--Color-text-buttons-foote);
+      font-weight: 700;
+      line-height: 1.6;
+      text-align: center;
+      text-transform: uppercase;
+    }
+    
+    button:hover .circle {
+      width: 100%;
+    }
+    
+    button:hover .circle .icon.arrow {
+      background: var(--Color-buttins-border-top-footer);
+      transform: translate(1rem, 0);
+    }
+    
+    button:hover .button-text {
+      color: var(--Color-text-buttons-foote-hover);
+    }  
