--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,7 @@
 
   html {
     scroll-behavior: smooth;
-  }
-  
+  } 
 
   .ModeLight {
       --Color-texte-portifolio: #242323;
@@ -78,7 +77,7 @@
 
   header{
     height: 100vh;
-    width: auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     background-color: var(--Backgtound-fundo-Color);
@@ -95,7 +94,7 @@
 
   #Portifolio {
     margin: 2rem;
-    font-size: 70px;
+    font-size: clamp(2.5rem, 5vw, 70px);
     font-weight: 900;
     color: var(--Color-texte-portifolio);
     transition: all 300ms;
@@ -111,7 +110,8 @@
     display: flex;
     justify-content: space-between;
     align-content: center;
-    width: 10%;   
+    gap: clamp(1rem, 3vw, 2rem);
+    width: auto;   
     margin: 2rem;
     display: flex;
   }
@@ -171,7 +171,7 @@
 
   #Name-Perso {
     margin: 1rem 0rem;
-    font-size: 70px;
+    font-size: clamp(2rem, 5vw, 4rem);
     font-weight: 900;
     color: var(--Color-Texto-pequeno);
     transition: all 300ms;
@@ -201,7 +201,7 @@
   
   #Founder{
     font-weight: 800; 
-    font-size: 35px;
+    font-size: clamp(1.5rem, 3vw, 1.8rem);
     color: var(--Color-Texto-pequeno);
     transition: all 300ms;
   }
@@ -211,7 +211,7 @@
     height: 70px;
     display: flex;
     align-items: center;
-    font-size: 19px;
+    font-size: clamp(1rem, 2vw, 1.2rem);
     color: var(--Color-Texto-pequeno);
     border-right: solid 5px var(--Color-Texto-pequeno);
     transition: all 300ms;
@@ -220,14 +220,15 @@
   .Social-Midias {
     height: 35%;
     display: flex;
-    gap: 0.5rem;
     flex-direction: column;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
   }
   
   .Social-Midias a {
-    height: 75px;
+    height: clamp(60px, 10vw, 75px); 
+    font-size: clamp(1rem, 3vw, 1.4rem); 
     width: 100%;
     display: flex;
     background-color: var(--Backgtound-cards-icons);
@@ -236,7 +237,6 @@
     border-radius: 10px;
     text-decoration: none;
     font-weight: 700;
-    font-size: 19px;
     color: var(--Backgtound-a-Icons);
     transition: all 300ms;
   }
@@ -247,28 +247,97 @@
   }
 
   .Social-Midias i {
-    font-size: 20px;
+    font-size: clamp(1.2rem, 3vw, 1.6rem); 
     font-weight: 900;
     color: var(--Color-icons-redes);
     margin-left: 1rem;
     transition: all 300ms;
   }
 
-
   .Imagem-Perso{
     height: auto;
-    width: 55%;
+    margin:  1rem;
+    width: 45%;
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
   #Imagem-User{
-    height: 750px;
-    width: 750px;
+    height: auto;
+    max-width: 100%;
     position: relative;
     top: 0;
     border-radius: 50%;
   }
+  
+  @media (max-width: 768px) {
+    .Top-barra {
+      flex-direction: column;
+      height: auto; /* Ajustar altura */
+    }
+  
+    .div_buttons {
+      width: 100%;
+      flex-direction: column;
+      margin: 1rem;
+    }
+  
+    .Painel-1 {
+      flex-direction: column;
+    }
+  
+    .Discrição-Perso, .Imagem-Perso {
+      width: 100%;
+    }
+  
+    #Name-Perso, #Portifolio {
+      font-size: 40px; /* Reduz o tamanho da fonte em telas menores */
+    }
+  
+    .Narve {
+      margin: 0 1rem;
+    }
+  }
 
+  @media (max-width: 1024px) {
+    .Painel-1 {
+      flex-direction: column; /* Coluna em telas menores */
+    }
+  
+    .Discrição-Perso {
+      width: 100%;
+    }
+  
+    .Imagem-Perso {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .Top-barra {
+      flex-direction: column;
+      padding: 1rem;
+    }
+  
+    #Portifolio, #Name-Perso {
+      font-size: 1.1rem; 
+    }
+  
+    .div_buttons {
+      width: 100%;
+      flex-direction: column;
+    }
+  
+    .Narve {
+      margin: 0;
+      height: auto;
+    }
+  
+    .Social-Midias a {
+      font-size: 1rem; 
+    }
+  }
+  
+  
   
