--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -54,27 +54,31 @@
 
 .footer-central p {
   font-size: 20px;
-  margin: 0rem 1rem;
+  margin: 0rem 7rem;
   color: var(--Color-texto);
   font-weight: 700;
 }
 
-.footer-central h1 {
-  line-height: clamp(10rem, 20vw, 20rem);
-  color: var(--Color-texto-footer-h1);
-  font-size: clamp(3rem, 20vw, 305px);
-  font-weight: 900;
+.text-container {
+  text-align: center;
+}
+
+.lets, .talk {
+  display: inline; 
+  font-size: 10rem;
+  font-weight: bold;
+  color: var(--Color-texto-footer-h1); 
 }
 
 #footer-2 {
   margin: 0rem 5rem;
   height: 3rem;
+  width: auto;
   display: flex;
   align-items: center;
-  gap: 4rem;
+  gap: 3rem;
 }
 
-/* Estilos dos botões */
 button {
   position: relative;
   display: inline-block;
@@ -175,10 +179,6 @@ button:hover .button-text {
     margin: 1.5rem 1rem;
   }
 
-  .footer-central h1 {
-    font-size: 10rem;
-    line-height: 12rem;
-  }
 
   .footer-central p {
     font-size: 18px;
@@ -203,7 +203,7 @@ button:hover .button-text {
 
   .circle {
     width: 2rem; 
-    height: 2rem;
+    height: 2 rem;
   }
 
   .button-text {
@@ -217,14 +217,21 @@ button:hover .button-text {
   .footer-central {
     margin: 1rem 0.5rem;
   }
+  .lets, .talk {
+    display: block;
+  }
 
-  .footer-central h1 {
-    font-size: 8rem;
-    line-height: 10rem;
+  .lets {
+    font-size: 6rem; 
+  }
+
+  .talk {
+    font-size: 6rem; 
   }
 
   .footer-central p {
     font-size: 16px;
+    margin: 0rem 3rem;
   }
 
   #footer-1 p,
@@ -238,35 +245,46 @@ button:hover .button-text {
 }
 
 @media (max-width: 480px) {
-  .footer {
-    padding: 1rem ;
+  button.learn-more {
+    display: flex; 
+    align-items: center;
+    width: 10rem; 
+    height: 2.5rem; 
+    padding: 0; 
   }
 
   .circle {
-    width: 1.8rem; 
-    height: 1.8rem;
+    width: 1.5rem; 
+    height: 1.5rem;
+    margin-right: 0.5rem; 
   }
 
   .button-text {
-    font-size: 10px; 
-    padding: 0.3rem 0;
+    font-size: 9px; 
+    text-align: left; 
+    margin: 0;
+  }
+
+  .footer {
+    padding: 0.5rem ;
   }
 
   #But-div {
-    gap: 0.5rem;
+    gap: 0.1rem;
   }
 
   #footer-1 {
-    margin: 0.5rem 1rem;
+    margin: 0.25rem 0.25rem;
+  }
+  
+  #footer-2 {
+    margin: 0rem 0rem;
+    display: flex;
+    gap: 0.1rem;
   }
 
   .footer-central {
     margin: 0.5rem 0.25rem;
-  }
-
-  .footer-central h1 {
-    font-size: 4rem;
-    line-height: 6rem;
   }
 
   .footer-central p {
@@ -275,10 +293,8 @@ button:hover .button-text {
 
   #footer-1 p,
   #But-div p {
-    font-size: 14px;
+    font-size: 12px;
   }
 
-  button.learn-more {
-    width: 8rem;
-  }
+
 }
