--- a/src/index.css
+++ b/src/index.css
@@ -313,11 +313,14 @@
     }
   }
 
-
   @media (max-width: 480px) {
     .div_buttons {
-      margin: 0.5rem;
-      gap: 0.7rem,;
+      margin: 0.2rem;
+      gap: 0.1rem,;
+    }
+
+    #Founder{
+      font-size: 1rem;
     }
 
     .Narve {
@@ -334,7 +337,11 @@
     }
 
     .Discrição-Perso {
-      margin: 1rem;
+      margin: 0.5rem;
+    }
+
+    .Social-Midias {
+      margin-right: 1rem;
     }
 
     .Imagem-Perso {
@@ -354,7 +361,9 @@
     }
 
     #Pequeno-Texto {
-      font-size: 0.8rem; 
+      font-size: 0.7rem; 
+      margin: 0.3rem 0rem;
+      margin-right: 1rem;
     }
   
     #Portifolio, #Name-Perso {
