--- a/src/hooks/Buttons/style.css
+++ b/src/hooks/Buttons/style.css
@@ -1,5 +1,3 @@
-
-
 #Traço-1, #Traço-2 {
     background-color: var(--Color-nav-animetino);
     transition: all 300ms;
@@ -27,30 +25,17 @@
     position: fixed;
   }
 
-  .semAnimetionNav {
+  .Nav_animetion {
     height: 100%;
-    width: 35%;
+    width: 25%;
     z-index: 1;
     background-color: var(--Backgtound-color-nav-animetion);
     position: fixed;
     top: 0;
-    right: -19.5rem;
-    animation: customAni2 400ms linear 0s normal forwards;
+    right: 0;
   } 
 
-  @keyframes customAni2 {
-    0% {
-      transform: scaleX(1);
-      transform-origin: 100% 100%;
-      }
-    
-      100% {
-      transform: scaleX(0.3);
-      transform-origin: 100% 100%;
-      }
-  }
-
-  .semAnimetionNav nav {
+  .Nav_animetion nav {
     height: 75%;
     display: flex;
     flex-direction: column;
@@ -59,7 +44,7 @@
     align-items: end;
   }
 
-  .semAnimetionNav ul {
+  .Nav_animetion ul {
     height: 75%;
     display: flex;
     flex-direction: column;
@@ -68,7 +53,7 @@
     align-items: end;
   }
 
-  .semAnimetionNav ul a {
+  .Nav_animetion ul a {
     margin: 0 18rem;
     text-decoration: none;
     color: white;
@@ -76,64 +61,7 @@
     font-weight: 900;
   }
 
-  .AnimetionNav { 
-    height: 100%;
-    width: 25%;
-    z-index: 1;
-    background-color: var(--Backgtound-color-nav-animetion);
-    position: fixed;
-    top: 0;
-    right: -5rem;
-    animation: customAni 400ms linear 0s normal forwards;
-  }
-
-  @keyframes customAni {
-    0% {
-    transform: scaleX(0.0);
-    transform-origin: 100% 100%;
-    }
-
-    100% {
-    transform: scaleX(1);
-    transform-origin: 100% 100%;
-    }
-  }
-
-  .AnimetionNav nav {
-    height: 75%;
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    justify-content: space-evenly;
-    align-items: end;
-  }
-
-
-  .AnimetionNav ul {
-    height: 75%;
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    justify-content: space-evenly;
-    align-items: end;
-  }
-
-  .AnimetionNav ul a {
-    margin: 0 7rem;
-    text-decoration: none;
-    color: white;
-    font-size: 30px;
-    font-weight: 900;
-  }
-
-  .AnimetionNav .Botao_Modo {
-    margin: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .semAnimetionNav .Botao_Modo {
+  .Nav_animetion .Botao_Modo {
     margin: 2rem;
     display: flex;
     justify-content: center;
