--- a/src/index.css
+++ b/src/index.css
@@ -257,7 +257,7 @@
   .Imagem-Perso{
     height: auto;
     margin:  1rem;
-    width: 45%;
+    width: 35%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -268,6 +268,7 @@
     max-width: 100%;
     position: relative;
     top: 0;
+    left: 5rem;
     border-radius: 50%;
     object-fit: cover;
   }
