--- a/src/hooks/Buttons/style.css
+++ b/src/hooks/Buttons/style.css
@@ -25,6 +25,19 @@
     position: fixed;
   }
 
+  .Nav_animation-wrapper {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+
   .Nav_animetion {
     height: 100%;
     width: 25%;
@@ -45,12 +58,13 @@
   }
 
   .Nav_animetion ul {
-    height: 75%;
+    height: 70%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     text-decoration: none;
     justify-content: space-evenly;
-    align-items: end;
+    align-items: center;
   }
 
   .Nav_animetion ul a {
