--- a/src/index.css
+++ b/src/index.css
@@ -264,12 +264,13 @@
   }
 
   #Imagem-User{
-    height: auto;
+    height: 80%;
     max-width: 100%;
     position: relative;
     top: 0;
     left: 5rem;
     border-radius: 50%;
+    transform: rotate(10deg);
     object-fit: cover;
   }
   
