--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@
 
   .Narve {
     height: 5rem;
-    margin: 0rem 4rem;
+    margin: 0rem 2rem;
     display: flex;
     border-radius: 50px;
     justify-content: space-around;
@@ -145,7 +145,7 @@
     text-decoration: none;
     color: var(--Color-nav-a);
     font-weight: 900;
-    font-size: clamp(16px, 3vw, 24px); 
+    font-size: clamp(14px, 3vw, 24px); 
     animation: reverse all 1000ms;
     transition: all 300ms;
   }
@@ -161,17 +161,32 @@
     box-sizing: border-box;
   } 
   
-  .Discrição-Perso {
-    width: 50%;
-    margin: 2rem;
+  .Painel-Perso {
+    width: 100%;
+    margin: 4rem;
+    display: flex;
+    gap: 0.5rem;
+  }
+
+  .Imagem-Perso{
+    height: auto;
+    width: 35%;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    justify-content: space-around;
+  }
+
+  #Imagem-User{
+    height: 80%;
+    max-width: auto;
+    border-radius: 5%;
+    display: flex;
+    object-fit: cover;
   }
 
   #Name-Perso {
     margin: 1rem 0rem;
-    font-size: clamp(2rem, 5vw, 4rem);
+    font-size: clamp(3rem, 5vw, 5rem);
     font-weight: 900;
     color: var(--Color-Texto-pequeno);
     transition: all 300ms;
@@ -211,7 +226,7 @@
     height: 70px;
     display: flex;
     align-items: center;
-    font-size: clamp(0.8rem, 2.5vw, 1rem);
+    font-size: clamp(0.8rem, 2.5vw, 1.3rem);
     color: var(--Color-Texto-pequeno);
     border-right: solid 5px var(--Color-Texto-pequeno);
     transition: all 300ms;
@@ -219,16 +234,17 @@
   
   .Social-Midias {
     height: 35%;
+    width: 85%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: start;
   }
   
   .Social-Midias a {
     height: clamp(60px, 10vw, 75px); 
-    font-size: clamp(1rem, 3vw, 1.4rem); 
+    font-size: clamp(1rem, 3vw, 1.1rem); 
     width: 100%;
     display: flex;
     background-color: var(--Backgtound-cards-icons);
@@ -247,33 +263,13 @@
   }
 
   .Social-Midias i {
-    font-size: clamp(1.2rem, 3vw, 1.6rem); 
+    font-size: clamp(1.2rem, 3vw, 1.3rem); 
     font-weight: 900;
     color: var(--Color-icons-redes);
     margin-left: 1rem;
     transition: all 300ms;
   }
 
-  .Imagem-Perso{
-    height: auto;
-    margin:  1rem;
-    width: 35%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  #Imagem-User{
-    height: 80%;
-    max-width: 100%;
-    position: relative;
-    top: 0;
-    left: 5rem;
-    border-radius: 50%;
-    transform: rotate(10deg);
-    object-fit: cover;
-  }
-  
   @media (max-width: 768px) {
     .Imagem-Perso {
       width: 70%; 
