--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@
 }
 
 
-  header{
+  header {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -84,7 +84,7 @@
     transition: all 300ms;
   }
   
-  .Top-barra{
+  .Top-barra {
     height: 5rem;
     width: 100%;
     display: flex;
@@ -150,7 +150,7 @@
     transition: all 300ms;
   }
 
-  .Narve a:hover{
+  .Narve a:hover {
     color: var(--Color-nav-a-houve);
     animation: reverse all 1000ms;
   }
@@ -168,17 +168,16 @@
     gap: 0.5rem;
   }
 
-  .Imagem-Perso{
+  .Imagem-Perso {
     height: auto;
-    width: 35%;
+    width: 20%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
   }
 
   #Imagem-User{
-    height: 80%;
-    max-width: auto;
+    width: auto;
     border-radius: 5%;
     display: flex;
     object-fit: cover;
@@ -192,7 +191,7 @@
     transition: all 300ms;
   }
 
-  #Name-Perso:after{
+  #Name-Perso:after {
     content: '|';
     margin-left: 8px;
     opacity: 1;
@@ -207,14 +206,20 @@
         opacity: 0;
     }
 }
-
+.Discrição-Perso {
+    max-width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 1.5rem;
+}
   #Email {
     font-size: 20px;
     color : var(--Color-Texto-pequeno);
     transition: all 300ms;
   } 
   
-  #Founder{
+  #Founder {
     font-weight: 800; 
     font-size: clamp(1.5rem, 3vw, 1.8rem);
     color: var(--Color-Texto-pequeno);
@@ -222,11 +227,10 @@
   }
   
   #Pequeno-Texto {
-    margin: 1rem 0rem;
     height: 70px;
     display: flex;
     align-items: center;
-    font-size: clamp(0.8rem, 2.5vw, 1.3rem);
+    font-size: clamp(1rem, 2.5vw, 1.3rem);
     color: var(--Color-Texto-pequeno);
     border-right: solid 5px var(--Color-Texto-pequeno);
     transition: all 300ms;
@@ -234,7 +238,7 @@
   
   .Social-Midias {
     height: 35%;
-    width: 85%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -249,7 +253,6 @@
     justify-content: end;
     align-items: center;
   }
-
   
   .Social-Midias a {
     height: clamp(60px, 10vw, 75px); 
@@ -278,6 +281,7 @@
     margin-left: 1rem;
     transition: all 300ms;
   }
+
 
   @media (max-width: 768px) {
     .Imagem-Perso {
