--- a/src/index.css
+++ b/src/index.css
@@ -172,7 +172,17 @@
     height: auto;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
+  }
+   
+  .Painel-img-redes {
+    height: 100%;
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
   }
 
   #Imagem-User{
@@ -321,13 +331,13 @@
       height: 30%;
       width: 100%;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      flex-wrap: wrap;
+      gap: 0.8rem;
     }
 
     .Conteiner-Image {
       height: 100%;
-      width: 50%;
+      width: 15%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -346,7 +356,7 @@
     }
 
     .Social-Midias {
-      height: 80%;
+      height: auto;
       width: 50%;
       display: flex;
       justify-content: center;
@@ -385,6 +395,8 @@
     .Discrição-Perso {
       font-size: 1.2rem;
       margin: 0.5rem;
+      display: flex;
+      flex-wrap: wrap-reverse;
     }
 
     .Social-Midias {
