--- a/src/components/Socialmidias/Socialmidias.css
+++ b/src/components/Socialmidias/Socialmidias.css
@@ -9,3 +9,38 @@
     align-items: center;
     background-color: var(--Backgtound-fundo-Color);
 }
+
+.Social-Midias-Container h1{
+    font-size: clamp(3rem, 10vw, 1.5rem);
+    font-weight: 900;
+    color: var(--Color-texte-portifolio);
+    transition: all 300ms;
+}
+
+.Social-Midias-Container .Social-Midias{
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.Social-Midias-Container .Social-Midias a{
+    height: 80rem;
+    width: 110rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 4rem;
+    font-weight: 900;
+    margin: 0rem;
+    text-decoration: none;
+    color: var(--Color-texte-portifolio);
+    background-color: var(--Backgtound-cards-icons);
+    transition: all 300ms;
+}
+
+.Social-Midias-Container .Social-Midias i {
+    font-size: 4rem;
+    margin: 1rem;
+}
